--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -4,6 +4,8 @@
 
 <h1>Weather forecast</h1>
 
+<img src="/api/DrawText/400/100" />
+
 <p>This component demonstrates fetching data from the server.</p>
 
 @if (forecasts == null)
