--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -16,75 +16,25 @@
         </ul>
     </nav>
     <h1>
-        An <u>aseptict</u> and <u>immutable</u> stylesheet for your web
-        application
+        Yet another <u>image placeholder</u> for your next projects
     </h1>
     <p>
-        <b>Nothing to learn, no frameworks,</b> just use HTML semantics tags and
-        <mark>you're done ✅</mark>.
-    </p>
-    <br />
-    <p>
-        <a download="demo.html" href="./mvp.html" target="_blank"><i>Download the demo file &nearr;</i></a>
-        <a download="stone.css" href="./mvp.css" target="_blank">
-            <b>Download stone.css (20kb) &nearr;</b>
-        </a>
+        Free forever without any usage limits
     </p>
     <br /><br />
     <p>
         <sup>Quick setup</sup> Add this code to your HTML file:<br /><br />
         <code>
-            <img src="https://www.placify.xyz/api/400/100"
+            &lt;img src=&quot;https://www.placify.xyz/api/draw/400/100&quot;
         </code>
+        <br />
+        <br />
+        This is the result
+        <br />
+        <img src="https://www.placify.xyz/api/draw/400/100"
     </p>
 </header>
 <main>
-    <hr />
-    <section>
-        <header>
-            <h2>Simple, reusable components</h2>
-            <p>For a clean looking design that doesn't get in the way</p>
-        </header>
-        <aside>
-            <img alt="HTML only"
-                 src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
-            <h3>HTML and You're Done</h3>
-            <p>
-                Stone.css styles your root HTML elements, so you don't need to learn a new
-                CSS framework or naming conventions.
-            </p>
-            <p>
-                <a href="https://www.w3schools.com/TAGS/ref_byfunc.asp"
-                   target="_blank"><em>HTML Guide &nearr;</em></a>
-            </p>
-        </aside>
-        <aside>
-            <img alt="Mobile friendly"
-                 src="https://images.unsplash.com/photo-1623354582128-d8e232a8649e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" />
-            <h3>Mobile-friendly UI</h3>
-            <p>
-                Stone.css is designed to look great on all browsers and devices out of the
-                box for rapid prototyping.
-            </p>
-            <p>
-                It's like an amped up CSS reset that you can toss into any project
-                to get decent styling.
-            </p>
-        </aside>
-        <aside>
-            <img alt="MIT license"
-                 src="https://images.unsplash.com/photo-1562412692-26406e1bf600?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" />
-            <h3>MIT License</h3>
-            <p>
-                Stone.css is released under the permissive MIT license so you can freely
-                use it however you'd like.
-            </p>
-            <p>
-                That means personal projects, commercial ventures, remixes and more
-                are all welcome.
-            </p>
-        </aside>
-    </section>
     <hr />
     <section id="testimonials">
         <blockquote>
@@ -96,64 +46,18 @@
         </blockquote>
     </section>
     <hr />
-    <section id="features">
-        <header>
-            <h2>Table looks awesome</h2>
-            <p>the table are always a pain for a designer, but not for us</p>
-        </header>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Company</th>
-                    <th>Contact</th>
-                    <th>Country</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Alfreds Futterkiste</td>
-                    <td>Maria Anders</td>
-                    <td>Germany</td>
-                </tr>
-                <tr>
-                    <td>Centro comercial Moctezuma</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
-                </tr>
-                <tr>
-                    <td>Ernst Handel</td>
-                    <td>Roland Mendel</td>
-                    <td>Austria</td>
-                </tr>
-                <tr>
-                    <td>Island Trading</td>
-                    <td>Helen Bennett</td>
-                    <td>UK</td>
-                </tr>
-                <tr>
-                    <td>Laughing Bacchus Winecellars</td>
-                    <td>Yoshi Tannamuri</td>
-                    <td>Canada</td>
-                </tr>
-                <tr>
-                    <td>Magazzini Alimentari Riuniti</td>
-                    <td>Giovanni Rovelli</td>
-                    <td>Italy</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-    <hr />
     <div id="figure">
         <header>
-            <h2>Unleash the power of your PoC</h2>
-            <p>5 minutes and your web application takes the flight</p>
+            <h2>Some Examples</h2>
         </header>
         <figure>
-            <img alt="Tesla"
-                 src="https://images.unsplash.com/photo-1560958089-b8a1929cea89?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" />
-            <figcaption><i>"Testa X" - not only a car</i></figcaption>
+            <img src="https://www.placify.xyz/api/draw/1200/450" />
+        </figure>
+        <figure>
+            <img src="https://www.placify.xyz/api/draw/1920/768" />
+        </figure>
+        <figure>
+            <img src="https://www.placify.xyz/api/draw/1024/500" />
         </figure>
     </div>
 </main>
@@ -163,5 +67,3 @@
         <a href="https://www.emanuelebartolesi.com" target="_blank">Emanuele Bartolesi &nearr;</a><br />
     </p>
 </footer>
-
-<img src="/api/Draw/400/100" />
